# ciroach

./: .gitignore  Cargo.toml  ciroach.toml  pipeline.toml
docs/: UNIFIED_EXECUTION_MODEL.md
docs/milestones/: 2026-01-27.md  2026-01-28.md  2026-01-29.md
examples/: pipeline.toml
src/: engine.rs  logger.rs  main.rs  ui.rs
src/models/: config.rs  mod.rs  raw.rs  reports.rs
src/pipeline/: config.rs  mod.rs  runner.rs  types.rs
src/reporter/: console.rs  file.rs  mod.rs
src/runner/: mod.rs  pipeline.rs  stage.rs  step.rs
