[package]
name = "ciroach"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bollard = "0.20.0"
chrono = "0.4.43"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "0.9.11"
